<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Pre-UNI Mobile Application</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_parent_home">ParentHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="grades">Grades</string>
    <string name="title_activity_staff_home">ParentHomeActivity</string>
    <string name="staff_nav_title_attendance">Attendance</string>
    <string name="card_detail_button_text">View Detail</string>
    <string name="title_activity_course_detail">CourseDetail</string>

    <string name="tab_text_1">Students</string>
    <string name="tab_text_2">Assignments</string>
    <string name="assignmentAddButtonContentDescription">Add An Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_page_string">
        <b>Our Method:</b>\n
        -<i>Others supervise, we teach</i>\n
        -<i>Support for parents</i>\n
        -<i>Regular assessments</i>\n
        -<i>Extra support for your child if they need it</i>\n
        -<i>Ability-based learning</i><br/>
        -<i>Process-driven so your child achieves their best</i>\n
        \n\n\n
        At Pre Uni College, your child is in an environment for peak performance,
        and is certain to thrive.
    </string>

    <string name="course_1_text">
        <b>EWMG Head Start Program</b>\n
        Our EWMG Head start program is carefully designed for
        students studying from year one through to year
        six focusing on skills including English, writing,
        Mathematics and General ability
    </string>

    <string name="course_2_text">
        <b>Selective School Trial Test</b>\n
        Our Selective School mock Tests give your
        child the chance to perfect exam technique,
        build confidence and overcome exam day nerves before the big day!
    </string>

    <string name="course_3_text">
        <b>OC Trial Test</b> \n
        Our comprehensive OC Trial Test Course give children
        the opportunity to become confident
        in Maths, English and General ability.
        In addition, we ensure that they are developing
        the underlying skills needed to tackle the exam with confidence.
    </string>

    <string name="course_4_text">
        <b>School Readiness</b>\n
        Our School Readiness is designed to effectively prepare children to enter Kindergarten
        with confidence. Positive attitudes towards
        learning about language ensure that students
        are more likely to experience success in school and community settings
    </string>

    <string name="course_5_text">
        <b>NAPLAN Preparation</b>\n
        If your child is about to take the NAPLAN test,our preparation
        course just may give them the edge they need.
        We give your child the best opportunity to ACE the exam
    </string>
</resources>