<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/shadowborder"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:maxHeight="240dp"
                    android:src="@drawable/course1_image"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_1_text"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:maxHeight="400dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/shadowborder"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:maxHeight="240dp"
                    android:src="@drawable/course_2_image"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_2_text"
                    android:gravity="center"
                    android:textAlignment="gravity"
                    android:maxHeight="400dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/shadowborder"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:maxHeight="240dp"
                android:src="@drawable/course_3_image"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_3_text"
                android:gravity="center"
                android:textAlignment="gravity"
                android:maxHeight="400dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/shadowborder"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:maxHeight="240dp"
                android:src="@drawable/course_4_image"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_4_text"
                android:gravity="center"
                android:textAlignment="gravity"
                android:maxHeight="400dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/shadowborder"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:maxHeight="240dp"
                android:src="@drawable/course_5_image"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_5_text"
                android:gravity="center"
                android:textAlignment="gravity"
                android:maxHeight="400dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>